@@ -1,3 +1,10 @@
+2007-01-18  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	Fixes #396228
+
+	* control-center.c (main): added new argument to appshelldata_new to
+	force the app to quit when the window is closed.
+
 2007-01-17  Thomas Wood  <thos@gnome.org>
 
 	* gnomecc.desktop.in.in: Remove GNOME part of the Name property, as per
